[gd_scene load_steps=22 format=2]

[ext_resource path="res://entities/Settings/AvatarController.gd" type="Script" id=1]
[ext_resource path="res://images/background.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/OpenSans_Normal.tres" type="DynamicFont" id=3]
[ext_resource path="res://images/frames/avatar_bg/bg1.png" type="Texture" id=4]
[ext_resource path="res://images/frames/avatars/avatar1/frame_0_delay-0.07s.png" type="Texture" id=5]
[ext_resource path="res://images/frames/avatar_bg/bg2.png" type="Texture" id=6]
[ext_resource path="res://images/frames/avatars/avatar2/frame_2_delay-0.1s.png" type="Texture" id=7]
[ext_resource path="res://images/frames/avatar_bg/bg3.png" type="Texture" id=8]
[ext_resource path="res://images/frames/avatars/avatar3/frame_6_delay-0.07s.png" type="Texture" id=9]
[ext_resource path="res://images/frames/avatar_bg/bg4.png" type="Texture" id=10]
[ext_resource path="res://images/frames/avatars/avatar4/frame_7_delay-0.07s.png" type="Texture" id=11]
[ext_resource path="res://images/frames/avatar_bg/bg5.png" type="Texture" id=12]
[ext_resource path="res://images/frames/avatars/avatar5/frame_00_delay-0.1s.png" type="Texture" id=13]
[ext_resource path="res://images/frames/avatar_bg/bg6.png" type="Texture" id=14]
[ext_resource path="res://images/frames/avatars/avatar6/frame_06_delay-0.1s.png" type="Texture" id=15]
[ext_resource path="res://images/frames/avatars/avatars.tres" type="SpriteFrames" id=16]
[ext_resource path="res://images/choose_btn.png" type="Texture" id=17]
[ext_resource path="res://entities/Settings/confirmation_popup.gd" type="Script" id=18]
[ext_resource path="res://images/modal_box.png" type="Texture" id=19]
[ext_resource path="res://images/accept_btn.png" type="Texture" id=20]
[ext_resource path="res://images/close_button.png" type="Texture" id=21]

[node name="AvatarController" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 510.349, 298.801 )
scale = Vector2( 0.853, 0.501 )
texture = ExtResource( 2 )

[node name="select_avatar_lbl" type="RichTextLabel" parent="."]
margin_left = 352.095
margin_top = 2.0
margin_right = 726.095
margin_bottom = 71.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.694118, 0.109804, 0.109804, 1 )
text = "SELECT AVATAR
"
scroll_active = false

[node name="avatargroup" type="Node" parent="."]

[node name="avatar1" type="TouchScreenButton" parent="avatargroup"]
position = Vector2( 28.7995, 114.862 )
scale = Vector2( 1.57116, 1.57116 )
normal = ExtResource( 4 )

[node name="avatar1img" type="Sprite" parent="avatargroup/avatar1"]
position = Vector2( 68.3369, 62.0292 )
scale = Vector2( 0.78618, 0.78618 )
texture = ExtResource( 5 )

[node name="avatar2" type="TouchScreenButton" parent="avatargroup"]
position = Vector2( 250.15, 114.862 )
scale = Vector2( 1.57116, 1.57116 )
normal = ExtResource( 6 )

[node name="avatar2img" type="Sprite" parent="avatargroup/avatar2"]
position = Vector2( 70.1575, 60.0478 )
scale = Vector2( 1.01426, 1.01426 )
texture = ExtResource( 7 )

[node name="avatar3" type="TouchScreenButton" parent="avatargroup"]
position = Vector2( 474.35, 114.862 )
scale = Vector2( 1.57116, 1.57116 )
normal = ExtResource( 8 )

[node name="avatar3img" type="Sprite" parent="avatargroup/avatar3"]
position = Vector2( 76.8638, 54.0182 )
scale = Vector2( 1.01426, 1.01426 )
texture = ExtResource( 9 )

[node name="avatar4" type="TouchScreenButton" parent="avatargroup"]
position = Vector2( 28.7995, 355.212 )
scale = Vector2( 1.57116, 1.57116 )
normal = ExtResource( 10 )

[node name="avatar4img" type="Sprite" parent="avatargroup/avatar4"]
position = Vector2( 73.3617, 59.1016 )
scale = Vector2( 0.9216, 0.9216 )
texture = ExtResource( 11 )

[node name="avatar5" type="TouchScreenButton" parent="avatargroup"]
position = Vector2( 250.15, 355.212 )
scale = Vector2( 1.57116, 1.57116 )
normal = ExtResource( 12 )

[node name="avatar5img" type="Sprite" parent="avatargroup/avatar5"]
position = Vector2( 73.1724, 59.7716 )
scale = Vector2( 0.9216, 0.9216 )
texture = ExtResource( 13 )

[node name="avatar6" type="TouchScreenButton" parent="avatargroup"]
position = Vector2( 474.35, 355.212 )
scale = Vector2( 1.57116, 1.57116 )
normal = ExtResource( 14 )

[node name="avatar6" type="Sprite" parent="avatargroup/avatar6"]
position = Vector2( 75.1889, 56.4219 )
scale = Vector2( 0.9216, 0.9216 )
texture = ExtResource( 15 )

[node name="SelectedAvatar" type="AnimatedSprite" parent="."]
position = Vector2( 866.12, 278.829 )
scale = Vector2( 2.80635, 2.80635 )
frames = ExtResource( 16 )
animation = "avatar1"

[node name="choose_avatar_btn" type="TouchScreenButton" parent="."]
position = Vector2( 716.842, 473.684 )
scale = Vector2( 0.631579, 0.631579 )
normal = ExtResource( 17 )

[node name="confirmation_popup" type="Popup" parent="."]
margin_left = -53.2
margin_top = -3.80002
margin_right = -13.2
margin_bottom = 36.2
popup_exclusive = true
script = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="confirmation_popup"]
position = Vector2( 517.568, 246.502 )
scale = Vector2( 0.835526, 1.14866 )
texture = ExtResource( 19 )

[node name="RichTextLabel" type="RichTextLabel" parent="confirmation_popup"]
margin_left = 357.128
margin_top = 174.814
margin_right = 885.128
margin_bottom = 404.814
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "      CONFIRM 
AVATAR CHANGE"
scroll_active = false

[node name="accept_btn" type="TouchScreenButton" parent="confirmation_popup"]
position = Vector2( 517.576, 307.365 )
scale = Vector2( 0.307479, 0.307479 )
normal = ExtResource( 20 )

[node name="close_btn" type="TouchScreenButton" parent="confirmation_popup"]
position = Vector2( 419.84, 307.699 )
scale = Vector2( 0.619114, 0.619114 )
normal = ExtResource( 21 )
